# neilbio

./: Makefile  README.md  app.py  poetry.toml  pyproject.toml
.github/workflows/: deploy.yml
config/: pytest.ini
static/css/: style.css
templates/: base.html  index.html  project_demo.html  projects.html  resume.html
tests/: test_routes.py
